# chama

./: .gitignore  README.md  docker-compose.yml  env_example
backend/: backend.dockerfile  pyproject.toml  start-reload.sh
backend/alembic/: env.py
backend/alembic/versions/: 0d55e5e43ac8_add_saving_and_fine.py  10dc772d2f49_update_saving_month_year_user_id_.py  658aae61827e_rename_date_submitted_to_date_sent.py  74f1fe19f3a1_add_users.py  ba9d6e71a5b5_add_loan_and_instalment.py  be4a02db9f3d_an_instalment_is_unique_for_month_and_.py  c87fc969724c_add_loan_restructure.py
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/endpoints/: fines.py  instalments.py  loans.py  savings.py  users.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  base.py  crud_fine.py  crud_instalment.py  crud_loan.py  crud_saving.py  crud_user.py
backend/app/db/: tasks.py
backend/app/models/: __init__.py  fine.py  instalment.py  loan.py  saving.py  user.py
backend/app/schemas/: __init__.py  fine.py  instalment.py  loan.py  saving.py  user.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/SavingsComponent/: TableComponent.tsx  index.tsx  test.tsx
